      phonon Depends;
    - add "phonon-backend-null | phonon" to libphonon-dev Depends;
    - add real Phonon backends to phonon metapackage Recommends.
  * Add lintian override for "phonon-backend-null: empty-binary-package".
  * Reshuffle backends in the Suggests of the phonon metapackage in the order of
    preferrence.
  * Drop README.source, no longer needed since switch to 3.0 (quilt).

 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Sun, 05 Dec 2010 16:01:39 +0100

phonon (4:4.6.0really4.4.3-1) experimental; urgency=low

  * New upstream release.

  [ Modestas Vainius ]
  * Point debian/control Vcs fields to the new Git repository.
  * Update symbol file. for 4.4.3 on amd64.
  * Update install files.
  * Remove references to obsolete << KDE 4.1 from debian/control.
  * Bump Standards-Version to 3.9.1: add Breaks next to Replaces where needed.

 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Fri, 26 Nov 2010 02:01:14 +0200

phonon (4:4.6.0really4.4.2-1) unstable; urgency=low

  * New upstream release:
    - fixes PulseAudio breakage in xine backend (Closes: #582716).
  * Switch to 3.0 (quilt) format:
    - build depend on pkg-kde-tools (>= 0.9);
    - set appropriate debian/source/format;
    - remove quilt from build depends;
    - use original tar.bz2 tarballs from now on.
  * Update symbol file.
  * Drop unused phonon-backend-null lintian-override.

 -- Modestas Vainius <modax@debian.org>  Tue, 08 Jun 2010 02:13:01 +0300

phonon (4:4.6.0really4.4.1-2) unstable; urgency=low

  * Update symbol file for armel, fixes FTBFS.

 -- Modestas Vainius <modax@debian.org>  Sun, 09 May 2010 12:42:34 +0300

phonon (4:4.6.0really4.4.1-1) unstable; urgency=low

  * New upstream release:
   - fixes crash when opening PDF document (Closes: #580802);

  [ Modestas Vainius ]
  * Add debian/watch.
  * Update patches:
    - refresh 01 and 02;
    - adapt 03 to upstream changes;
    - remove 04, was stolen from upstream.