@@ -1,0 +1,67 @@
+# START POSTINST[phonon-null-backend/isnt_functional]
+
+. /usr/share/debconf/confmodule
+
+query_package_status()
+{
+    dpkg-query -W -f'${Status}\n' "$1" | cut -d' ' -f3
+}
+
+# This function will show a warning about phonon-backend-null whenever phonon
+# metapackage or phonon-backend-null is being installed
+warn_about_phonon_backend_null()
+{
+    local package=`basename "$0" .postinst`
+    local show_warning=0
+    local recommended_backend="#RECOMMENDED_BACKEND#"
+    local other_backends
+
+    # Do not show the note when reconfiguring
+    if [ "$1" = "reconfigure" ] || [ "DEBCONF_RECONFIGURE" = "1" ]; then
+        return 0
+    fi
+
+    if [ "$1" = "configure" ]; then
+        case "$package" in
+            # In case the phonon metapackage is being installed, display the
+            # warning only if phonon-backend-null is already installed.
+            phonon)
+                if [ "`query_package_status phonon-backend-null`" = "installed" ]; then
+                    show_warning=1
+                fi
+            ;;
+            # If null backend is being installed, show the warning only if
+            # phonon metapackage is already installed
+            phonon-backend-null)
+                if [ "`query_package_status phonon`" = "installed" ]; then
+                    show_warning=1
+                fi
+            ;;
+            *)
+                echo "warn_about_phonon_backend_null: unsupported package: $package" >&2
+                exit 10
+            ;;
+        esac
+
+        # Finally show the note if needed (and it wasn't seen already)
+        db_fget phonon-backend-null/isnt_functional seen || true
+        if [ "$RET" != "true" ] && [ "$show_warning" = "1" ]; then
+            other_backends="`LC_ALL=C apt-cache showpkg phonon-backend | \
+                            awk '/: *$/{go=0} {if (go==1) print $1;} /^Reverse Provides: *$/ {go=1}' | \
+                            sort -u | \
+                            grep -v -e phonon-backend-null -e "$recommended_backend" | \
+                            awk '{printf ", " $1}'`"
+            db_settitle phonon-backend-null/isnt_functional_title || true
+            db_subst phonon-backend-null/isnt_functional recommended_backend "$recommended_backend"
+            db_subst phonon-backend-null/isnt_functional other_backends "$other_backends"
+            db_input high phonon-backend-null/isnt_functional || true
+            db_go || true
+        fi
+    fi
+}
+
+warn_about_phonon_backend_null "$@"
+
+# vim: set syntax=sh
+
+# END POSTINST[phonon-null-backend/isnt_functional]
