@@ -1,0 +1,17 @@
+#!/bin/sh
+
+set -e
+
+case "$1" in
+    *upgrade)
+        # Do not touch phonon-backend-null/isnt_functional on upgrades
+    ;;
+    *)
+        if [ -e /usr/share/debconf/confmodule ]; then
+            . /usr/share/debconf/confmodule
+            db_fset phonon-backend-null/isnt_functional seen false || true
+        fi
+    ;;
+esac
+
+#DEBHELPER#
