@@ -1,0 +1,7 @@
+#!/bin/sh
+
+set -e
+
+#INCLUDE debian/phonon-backend-null.dc-postinst.in#
+
+#DEBHELPER#
