@@ -31,6 +31,9 @@ phonon (4:4.6.0really4.4.4-0r1) UNRELEASED; urgency=low
   * Reshuffle backends in the Suggests of the phonon metapackage in the order of
     preferrence.
   * Drop README.source, no longer needed since switch to 3.0 (quilt).
+  * Show a debconf warning to users who end up installing phonon-backend-null
+    (probably unintentionally). The warning is displayed only if both phonon
+    and phonon-backend-null packages end up being installed.
 
  -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Sun, 05 Dec 2010 16:01:39 +0100
 
